--- a/app/views/shared/_user_sidebar.html.erb
+++ b/app/views/shared/_user_sidebar.html.erb
@@ -2,7 +2,11 @@
   <%= render :partial => 'polls/sidebar_box'%>
   <div id="calendar_box" class="sidebar_box">
     <h3><%= locales[:dialy_offer]%></h3>
-    <%= draw_calendar_switch(:scheduled_days => @days.collect {|day| day.scheduled_for }, :date => @date, :url_options => {:controller => 'menu'}) %>
+    <%= draw_calendar_switch(
+      :scheduled_days => @days.collect {|day| day.scheduled_for },
+      :date => @date, :url_options => {:controller => 'menu'},
+      :last_day => @days.last.scheduled_for
+    ) %>
   </div>
   <% if @news && !@news.empty? %>
   <div id="news_box" class="sidebar_box">
