--- a/public/stylesheets/master.css
+++ b/public/stylesheets/master.css
@@ -1159,3 +1159,19 @@ table.sortable tbody tr td:first-child:before {
 #dialy_menu p {
   clear: left;
 }
+
+.meal .fb_like {
+  padding-left: 24px;
+}
+dl.show {
+  margin-top: 1em;
+}
+dl.show dt {
+  font-weight: bold;
+  float: left;
+  clear: left;
+}
+dl.show dd {
+  float: left;
+  margin-left: .5em;
+}
