--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <meta name="googlebot" content="index,follow,snippet,archive=" />
     <meta property="fb:admins" content="1134815611"/>
     <meta property="fb:page_id" content="132981152507"/>
-    <meta property="og:site_name" content="Zeleká kuchyně – vegetariánská restaurace"/>
+    <meta property="og:site_name" content="Zelená kuchyně – vegetariánská restaurace"/>
     <%= yield(:og) || render(:partial => "shared/og") %>
     <link href="<%=url_for(:controller => "menu",:action=>"feed",:format=>"xml")%>" type="application/rss+xml" rel="alternate" title="<%=locales[:meal_rss_title]%>" />
     <link rel="stylesheet" href="/stylesheets/master.css" type="text/css" media="screen, projection" charset="utf-8" />
