--- a/app/views/dialy_menus/show.html.erb
+++ b/app/views/dialy_menus/show.html.erb
@@ -1,29 +1,30 @@
-<h1>Zelená kuchyně</h1>
-<h2>vegetariánské menu</h2>
-<h3><%= format @record.date %></h3>
-<p>dnes nabízíme:</p>
 <div id="dialy_menu">
-<%- menu = nil%>
-<%- @hash.each do |category, meals|%>
-  <%- if menu.nil? && meals.any?(&:in_menu?) &&  @record.menu_price? -%>
-    <%-menu = true%>
-    <div id="menu">
-  <%-end-%>
-  <%- if menu && !meals.any?(&:in_menu?)-%>
-    <%- menu = false%>
-    <h2 class="whole_menu">Celé menu</h2><strong class="price"><%= format_currency @record.menu_price%></strong>
-    </div>
-  <%-end-%>
-  <h1><%= h category.name%></h1>
-  <%- last = nil %>
-  <%-meals.each do |meal|%>
-    <%-if !meal.in_menu? && last && last.in_menu?  %>
+  <h1>Zelená kuchyně</h1>
+  <h2>Vegetariánské menu na&nbsp;</h2>
+  <h3><%= format @record.date %></h3>
+  <p>Dnes nabízíme:</p>
+  <%- menu = nil%>
+  <%- @entries.each do |category, meals|%>
+    <%- if category == @categories[:first]%>
+      <%- menu = true %>
       <hr/>
     <%-end-%>
-    <h2><%= h meal.name%></h2><strong class="price"><%= format_currency meal.price%></strong>
-    <p><%= meal.description%></p>
-    <%- last = meal%>
-  <%- end -%>
-
-<%- end-%>
+      <h1><%= h category.name%></h1>
+      <%- last = nil %>
+      <%-meals.each do |meal|%>
+        <div class="meal <%= meal.in_menu? ? 'menu' : 'entry'%>">
+          <h2><%= h meal.name%></h2><strong class="price"><%= format_currency meal.price%></strong>
+          <%-if menu && !meal.in_menu?%>
+          <em class="note">není součástí menu</em>
+          <%-end-%>
+          <p><%= czech_typo(meal.description)%></p>
+        </div>
+      <%- end -%>
+    <%- if category == @categories[:last]%>
+      <h2 class="whole_menu">Celé menu</h2><strong class="price"><%= format_currency @record.menu_price%></strong>
+      <div class="clearfix">&nbsp;</div>
+      <hr/>
+      <%- menu = false %>
+    <%-end-%>
+  <%- end-%>
 </div>
