added dialy menu to sidebar

--- a/app/views/shared/_user_sidebar.html.erb
+++ b/app/views/shared/_user_sidebar.html.erb
@@ -8,6 +8,14 @@
       :last_day => @days.last.scheduled_for
     ) %>
   </div>
+  <% if @dialy_menu && @dialy_entries && @dialy_categories %>
+  <div id="news_box" class="sidebar_box">
+    <div class="story">
+      <h4>Dnešní menu restaurace</h4>
+      <%= render :partial => "dialy_menus/menu", :locals => {:prices => true, :entries => @dialy_entries, :categories => @dialy_categories, :menu => @dialy_menu}%>
+    </div>
+  </div>
+  <% end %>
   <% if @news && !@news.empty? %>
   <div id="news_box" class="sidebar_box">
     <% for story in @news %>
