--- a/app/views/dialy_menus/_form.html.erb
+++ b/app/views/dialy_menus/_form.html.erb
@@ -20,15 +20,15 @@
         </thead>
         <tbody>
           <tr class="sample">
-            <td><%= text_field_tag "entries[ID][name]", nil, :class => "name", :size => 40 %></td>
-            <td><%= text_field_tag "entries[ID][price]", nil, :class => "price", :size => 5, :onykeyup => 'decimal_dot_conversion(this)' %>&nbsp;Kč</td>
+            <td><%= text_field_tag "entries[ID][name]", nil, :class => "name", :size => 36 %></td>
+            <td><%= text_field_tag "entries[ID][price]", nil, :class => "price", :size => 4, :onykeyup => 'decimal_dot_conversion(this)' %>&nbsp;Kč</td>
             <td>
               <select class="category" name="entries[ID][category_id]">
                 <option/>
                 <%= options_from_collection_for_select @categories, :id, :name %>
               </select>
             </td>
-            <td><%= check_box_tag "entries[ID][in_menu]", 1, false%></td>
+            <td><%= check_box_tag "entries[ID][in_menu]", 1, false%><%= hidden_field_tag "entries[ID][in_menu]", 0 %></td>
             <td rowspan="2"><a href="#" class="destroy">smazat</a><%= hidden_field_tag "entries[ID][_destroy]" %></td>
           </tr>
           <tr class="sample">
@@ -36,15 +36,15 @@
           </tr>
         <%- @record.entries.each do |entry| -%>
           <tr>
-            <td><%= text_field_tag "entries[#{entry.id}][name]", entry.name, :class => "name", :size => 40 %></td>
-            <td><%= text_field_tag "entries[#{entry.id}][price]", entry.price, :class => "price", :size => 5, :onykeyup => 'decimal_dot_conversion(this)'%>&nbsp;Kč</td>
+            <td><%= text_field_tag "entries[#{entry.id}][name]", entry.name, :class => "name", :size => 36 %></td>
+            <td><%= text_field_tag "entries[#{entry.id}][price]", entry.price, :class => "price", :size => 4, :onykeyup => 'decimal_dot_conversion(this)'%>&nbsp;Kč</td>
             <td>
               <select class="category" name="entries[<%=entry.id%>][category_id]">
                 <option/>
                 <%= options_from_collection_for_select @categories, :id, :name, entry.category_id %>
               </select>
             </td>
-            <td><%= check_box_tag "entries[#{entry.id}][in_menu]", 1, entry.in_menu?%></td>
+            <td><%= check_box_tag "entries[#{entry.id}][in_menu]", 1, entry.in_menu?%><%= hidden_field_tag "entries[#{entry.id}][in_menu]", 0 %></td>
             <td rowspan="2"><a href="#" class="destroy">smazat</a><%= hidden_field_tag "entries[#{entry.id}][_destroy]" %></td>
           </tr>
           <tr>
