--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -93,7 +93,7 @@
         </ul>
       </div>
     </div><!-- /#sections -->
-    <div id="menu_<%= active_section %>" class="menu container">
+    <div id="menu_<%= active_section %>" class="menubar container">
       <div id="menu_pages">
         <%= snippet 'menu_pages' %>
       </div>
