--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -64,6 +64,7 @@
       <script type="text/javascript" src="/javascripts/jquery.iefixpng.js"></script>
     <![endif]-->
     <title><%= locales['layout_title'] %><%= yield(:title) || '' %></title>
+    <%= yield(:head) %>
   </head>
   <body id="body">
     <% if current_user.belongs_to_one_of?(:admins, :heads_of_car_pool, :operating_officers, :warehousers, :deliverymen, :chefs) %>
@@ -81,6 +82,9 @@
           </li>
           <li id="s_eshop"<%= ' class="active"' if active_section == 'eshop' %>>
             <a href="/eshop"><span><%= locales[:menu_eshop]%></span></a>
+          </li>
+          <li id="s_restaurant"<%= ' class="active"' if active_section == 'restaurant' %>>
+            <a href="/restaurace"><span><%= locales[:menu_restaurant]%></span></a>
           </li>
           <li id="s_basket"<%= ' class="active"' if active_section == 'basket' %>>
             <a href="/basket"><span><%= locales[:menu_basket]%></span></a>
