--- a/public/stylesheets/print.css
+++ b/public/stylesheets/print.css
@@ -12,7 +12,7 @@ h1 {
 h2 {
   font-size: 16pt;
 }
-#header, .menu.container, #sidebar, .admin_menu, #footer {
+#header, .menubar, #sidebar, .admin_menu, #footer {
   display: none !important;
 }
 .meal fieldset {
@@ -105,44 +105,3 @@ div#order td {
   padding-bottom: 8pt;
 }
 /* dialy menu */
-
-#dialy_menu {
-  padding-top: 72pt;
-}
-#dialy_menu h1 {
-  font-size: 16pt;
-  margin-top: 0.75em;
-  margin-bottom: 0.25em;
-  color: #638C33;
-}
-#dialy_menu h2, #dialy_menu h3 {
-  font-size: 14pt;
-  margin-top: 0;
-  margin-bottom: 0.25em;
-}
-#dialy_menu h2 {
-  float: left;
-}
-#dialy_menu .price {
-  float: right;
-}
-#dialy_menu .note {
-  margin-right: 1em;
-  float: right;
-}
-#dialy_menu p {
-  clear: left;
-  margin: 0.25em 0;
-}
-#dialy_menu .meal {
-  margin-bottom: 1em;
-  margin-top: 0.25em;
-}
-#dialy_menu  hr {
-  clear: both;
-  margin: 1em auto;
-  width: 66%;
-  background: #638C33;
-  height: 1pt;
-  border: none;
-}
