--- a/app/views/views/shopping_list.html.erb
+++ b/app/views/views/shopping_list.html.erb
@@ -3,7 +3,7 @@
 <% end %>
 
 <% content_for :javascript do %>
-  <% fw_strings = {:val_true => locales['true'], :val_false => locales['false'], :submit => locales['submit'], :show_all => locales['show_all']} %>
+  <% fw_strings = {:val_true => locales['true'], :val_false => locales['false'], :submit => locales['submit'], :show_all => locales['show_all'], :formats => {'xls' => locales['download'] + " XLS"}} %>
   <%= filter_widget("shopping_list-rules", :url => url_for(params), 
                                    :wrap => false, 
                                    :beforeSend => %{function() {$("#shopping_list").html('<p><img src="/images/loading.gif" alt="loading" /></p>');}}, 
