--- a/app/views/shared/_user_sidebar.html.erb
+++ b/app/views/shared/_user_sidebar.html.erb
@@ -4,7 +4,7 @@
     <h3><%= locales[:dialy_offer]%></h3>
     <%= draw_calendar_switch(
       :scheduled_days => @days.collect {|day| day.scheduled_for },
-      :date => @date, :url_options => {:controller => 'menu'},
+      :date => @date, :url_options => {:controller => 'menu', :action => :show},
       :last_day => @days.last.scheduled_for
     ) %>
   </div>
