--- a/app/views/menu/feed.xml.erb
+++ b/app/views/menu/feed.xml.erb
@@ -12,16 +12,14 @@
         <%-items[:menus].each do |menu|-%>
           <h3><%=menu.name%></h3>
           <%-menu.meals.each do |meal|-%>
-          <h4><%=meal.name%></h4>
-          <%= meal_flags(meal, false) %>
+          <h4><%=meal.name%><%= meal_flags(meal, false) %></h4>
           <%=meal.description%>
           <%-end-%>
         <%-end-%>
         <%-items[:categories].each_pair do |category, meals|-%>
           <h3><%=category.name%></h3>
           <%-meals.each do |meal|-%>
-          <h4><%=meal.name%></h4>
-          <%= meal_flags(meal, false) %>
+          <h4><%=meal.name%><%= meal_flags(meal, false) %></h4>
           <%= meal.description%>
           <%-end-%>
         <%-end-%>
