finished printing menus

--- a/app/views/layouts/application.print.erb
+++ b/app/views/layouts/application.print.erb
@@ -65,7 +65,7 @@
     //<![CDATA[
       <%= yield :javascript %>
       $(function(){
-//          window.print();
+          window.print();
           setTimeout(function(){
             //window.history.back();
           }, 100);
