--- a/app/views/shared/_menu_menu.html.erb
+++ b/app/views/shared/_menu_menu.html.erb
@@ -1,2 +1,3 @@
 <%= link_to locales[:today_menu], '/menu' %> |
 <%= link_to locales[:tomorrow_menu], menu_path(Date.tomorrow) %>
+<%= link_to locales[:print_menus], formatted_print_menu_path(:format => :html), :class=> "print_menus"%>
